Fixes #12691: Fix styling for publish indicator so it's visible outside of object-details again
In commit:ba5076655e67 the indicator was changed from an <img> to a
span with CSS (so the icon could come from the sprite), however the
CSS rules were only updated for object-details, not in general.

--- a/core/src/zeit/cms/browser/resources/cms.css
+++ b/core/src/zeit/cms/browser/resources/cms.css
@@ -760,3 +760,21 @@ li.busy {
     height: 3px;
     background-image: url("layout/pupil.png");
 }
+
+.publish-state {
+    padding-top:15px;
+    padding-left:20px;
+    background: url("../zeit\.cms/icons/icons_sprites.png") no-repeat 15px -1581px;
+}
+
+.publish-state.published {
+    background-position: 7px -1581px;
+}
+
+.publish-state.not-published {
+    background-position: 7px -1670px;
+}
+
+.publish-state.published-with-changes {
+    background-position: 7px -1611px;
+}
